# Junia-old

./: ..gitattributes.swp  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Doxyfile  Jenkinsfile  Junia.sln  JuniaHeaderLib.sln  README.md  clean.bat  generate-linux.sh  generate-mac.sh  generate-vs2022.bat  generate-win.bat  generate.bat  premake5.lua
Editor/: CMakeLists.txt
Editor/res/Shaders/: shader1.vert  shader2.frag
Editor/src/: Editor.cpp
Editor/src/Assets/Shaders/: shader1.frag  shader1.vert  shader2.vert  shader2_vert.spv
Editor/src/Scenes/: Scene1.cpp  Scene1.hpp
Editor/src/Shaders/: shader1.frag  shader1.vert  shader1_frag.spv
Editor/src/Systems/: GravitySystem.cpp  GravitySystem.hpp
Junia/: CMakeLists.txt  Junia.vcxproj  Junia.vcxproj.filters  MouseEvents.h  premake-junia.lua
Junia/assets/: player.pyxel
Junia/dependencies/: .gitignore  CMakeLists.txt  premake-EnTT.lua  premake-GLFW.lua  premake-GLM.lua  premake-dependencies.lua  premake-fmt.lua  premake-freetype.lua  premake-glad.lua  premake-imgui.lua  premake-spdlog.lua  premake-stb.lua  premake-vulkan.lua
Junia/dependencies/glad/include/glad/: glad.h
Junia/dependencies/glad/src/: glad.c
Junia/include/: JMath.hpp  Junia.hpp
Junia/include/JMath/: Constants.hpp  Mathf.hpp  Matrices.hpp  Matrix2x2.hpp  Matrix2x3.hpp  Matrix2x4.hpp  Matrix3x2.hpp  Matrix3x3.hpp  Matrix3x4.hpp  Matrix4x2.hpp  Matrix4x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Types.hpp  Vector1.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Vectors.hpp
Junia/include/Junia/Core/: FileSystem.hpp  IdPool.hpp  Input.hpp  Keycodes.hpp  Log.hpp  Logger.hpp  MessageBox.hpp  Monitor.hpp  RenderApi.hpp  Scene.hpp  Time.hpp  Version.hpp  Window.hpp  WindowApi.hpp
Junia/include/Junia/ECS/: ComponentContainer.hpp  Components.hpp  ECS.hpp  Systems.hpp
Junia/include/Junia/ECS/Components/: EntityInfo.hpp  MeshRenderer.hpp  Transform.hpp
Junia/include/Junia/ECS/Systems/: RendererSystem.hpp
Junia/include/Junia/Events/: Event.hpp  Events.hpp  InputEvents.hpp  WindowEvents.hpp
Junia/include/Junia/Renderer/: Material.hpp  Mesh.hpp  RenderDevice.hpp  RenderPackage.hpp  Renderer.hpp  Shader.hpp  Surface.hpp
Junia/include/Junia/Util/: Concepts.hpp  Gsl.hpp
Junia/include/JuniaScripting/: Bindings_JMath.hpp  Exports.hpp
Junia/include/Platform/: OpenAL.hpp  Vulkan.hpp
Junia/include/Platform/OpenAL/: Exception.hpp  OutputDevice.hpp
Junia/include/Platform/Vulkan/: Exception.hpp  LogicalDevice.hpp  PhysicalDevice.hpp  Surface.hpp  Vulkan.hpp
Junia/src/: Build.cpp  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Junia.cpp  Junia.h  Junia.hpp  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  jepch.cpp  jepch.h  juniapch.cpp  juniapch.h  juniapch.hpp  main.cpp  pch.h
Junia/src/ECS/: Components.h  ECS.h  PositionComponent.h  SpriteComponent.h
Junia/src/Junia/: Application.cpp  Application.h  Application.hpp  Base.h  Base.hpp  Core.h  EntryPoint.h  EntryPoint.hpp  GlfwWindow.cpp  GlfwWindow.hpp  Input.hpp  KeyCodes.hpp  Layer.h  Layer.hpp  LayerSystem.cpp  LayerSystem.h  LayerSystem.hpp  Log.cpp  Log.h  Log.hpp  Logger.cpp  Logger.hpp  MouseButtonCodes.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  Version.cpp  Version.hpp  Window.cpp  Window.hpp
Junia/src/Junia/Core/: Application.cpp  Application.hpp  Base.hpp  Core.hpp  EntryPoint.hpp  Input.cpp  Input.hpp  InternalLoggers.cpp  InternalLoggers.hpp  Keycodes.cpp  Layer.hpp  LayerSystem.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  Monitor.cpp  MouseButtonCodes.hpp  Scene.cpp  Scene.hpp  Timestep.hpp  Version.cpp  Version.hpp  Window.cpp  Window.hpp
Junia/src/Junia/ECS/: Component.cpp  Component.hpp  ComponentStore.cpp  ComponentStore.hpp  ECS.cpp  Entity.cpp  Entity.hpp
Junia/src/Junia/ECS/Systems/: RendererSystem.cpp
Junia/src/Junia/Events/: ApplicationEvent.h  ApplicationEvent.hpp  Event.cpp  Event.h  Event.hpp  EventSystem.cpp  EventSystem.hpp  Events.cpp  Events.hpp  InputEvents.cpp  JoystickEvents.cpp  JoystickEvents.hpp  KeyEvent.h  KeyEvent.hpp  KeyboardEvents.cpp  KeyboardEvents.h  KeyboardEvents.hpp  MouseEvent.h  MouseEvent.hpp  MouseEvents.cpp  MouseEvents.hpp  WindowEvents.cpp  WindowEvents.hpp
Junia/src/Junia/Platform/: Platform.hpp
Junia/src/Junia/Renderer/: Buffer.cpp  Buffer.hpp  Font.cpp  Font.hpp  Material.cpp  Mesh.cpp  OrthographicCamera.cpp  OrthographicCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderContext.hpp  RenderDevice.cpp  RenderPackage.cpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Surface.cpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
Junia/src/Junia/UI/: ImGuiLayer.cpp  ImGuiLayer.hpp  JUI.cpp  JUI.hpp  JUILayer.cpp  JUILayer.hpp  JUIRenderer.cpp  JUIRenderer.hpp
Junia/src/JuniaScripting/: Bindings_JMath.cpp
Junia/src/Platform/: GLFW.cpp  GLFW.hpp  OpenAL.cpp  OpenAL.hpp  Vulkan.cpp  Vulkan.hpp
Junia/src/Platform/GLFW/: GlfwInput.cpp  GlfwInput.hpp  GlfwMonitor.cpp  GlfwMonitor.hpp  GlfwWindow.cpp  GlfwWindow.hpp
Junia/src/Platform/OS/: LinuxFileSystem.cpp  WindowsFileSystem.cpp
Junia/src/Platform/OpenAL/: OpenAL.cpp  OutputDevice.cpp  OutputDevice.hpp
Junia/src/Platform/Vulkan/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  ExtensionLoader.cpp  ExtensionLoader.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  LogicalDevice.cpp  PhysicalDevice.cpp  Pipeline.cpp  Pipeline.hpp  Queue.cpp  Queue.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderPass.cpp  RenderPass.hpp  Surface.cpp  Swapchain.cpp  Swapchain.hpp  Vulkan.cpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanExtensionLoader.cpp  VulkanExtensionLoader.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  (+16 more)
Junia/src/Util/: util_cstring.hpp
Logo/: FirstDraft.pdn
(+691 files in other folders)
